<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/data_person"
        android:textColor="#f5bf1f"
        android:textSize="@dimen/font_title"/>

    <TextView
        android:id="@+id/textName"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginTop="31dp"
        android:text="@string/name_person"
        android:textColor="@color/title_person"
        android:textSize="@dimen/font_title"
        app:layout_constraintTop_toBottomOf="@+id/textData"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textNamePerson"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginTop="2dp"
        android:textColor="@color/text_person"
        android:textSize="@dimen/font_text"
        app:layout_constraintTop_toBottomOf="@+id/textName"
        tools:text="Анастасия"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textSurname"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/surname_person"
        android:textColor="@color/title_person"
        android:textSize="@dimen/font_title"
        app:layout_constraintTop_toBottomOf="@+id/textNamePerson"
        android:layout_marginTop="26dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textSurnamePerson"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginTop="2dp"
        android:textColor="@color/text_person"
        android:textSize="@dimen/font_text"
        app:layout_constraintTop_toBottomOf="@id/textSurname"
        tools:text="Антонина"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textMail"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/mail_person"
        android:textColor="@color/title_person"
        android:textSize="@dimen/font_title"
        android:layout_marginTop="26dp"
        app:layout_constraintTop_toBottomOf="@id/textSurnamePerson"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textMailPerson"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginTop="2dp"
        android:textColor="@color/text_person"
        android:textSize="@dimen/font_text"
        app:layout_constraintTop_toBottomOf="@+id/textMail"
        tools:text="anykee.box@gmail.ru"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textLogin"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/login_person"
        android:textColor="@color/title_person"
        android:textSize="@dimen/font_title"
        android:layout_marginTop="26dp"
        app:layout_constraintTop_toBottomOf="@+id/textMailPerson"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textLoginPerson"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginTop="2dp"
        android:textColor="@color/text_person"
        android:textSize="@dimen/font_text"
        app:layout_constraintTop_toBottomOf="@+id/textLogin"
        tools:text="HIE023UOI88"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textRegion"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/region_person"
        android:textColor="@color/title_person"
        android:textSize="@dimen/font_title"
        android:layout_marginTop="26dp"
        app:layout_constraintTop_toBottomOf="@+id/textLoginPerson"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textRegionPerson"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginTop="2dp"
        android:textColor="@color/text_person"
        android:textSize="@dimen/font_text"
        app:layout_constraintTop_toBottomOf="@+id/textRegion"
        tools:text="Санкт-Петербург"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/buttonEditRegion"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="386dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/ic_edit_black_24_px"
        app:layout_constraintBottom_toBottomOf="@+id/textRegion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/textRegion"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/buttonExit"
        android:layout_width="21dp"
        android:layout_height="18dp"
        android:layout_marginTop="38dp"
        android:background="@drawable/ic_menu_exit"
        app:layout_constraintTop_toBottomOf="@+id/textRegionPerson"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="31dp"
        app:layout_constraintBottom_toBottomOf="@id/buttonExit"
        app:layout_constraintStart_toEndOf="@id/buttonExit"
        android:text="@string/exit_person"
        android:textColor="@color/text_person"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>